--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,5 @@
 /*------------------------------------------------------------------
- * template Name: lwc_1
+ * template Name: ld_1
  -------------------------------------------------------------------*/
 
  .from-text {
